cleanup work to do with getting rid of spurious instantiations of REST modules, UNFINISHED